# ContactManager

./: .gitignore  conftest.py  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 369d6c809dc9_init.py  38bb854e5603_added_users.py  4614be38d49e_fixed_db_url.py  db84cfe41cec_added_confirmed.py  dbfc632be550_added_avatars.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: birthday_utils.py  contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/src/repository/: test_contacts.py  test_users.py
tests/src/routes/: test_auth.py
