[tool.poetry]
name = "contactmanager"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^1.10.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
