[tool.poetry]
name = "contactmanager"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^1.10.9"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.3.1"
fastapi-limiter = "^0.1.5"
redis = "^4.6.0"
cloudinary = "^1.33.0"
libgravatar = "^1.0.4"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"


[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
